# artifactor

./: .dockerignore  .env.example  ARTIFACTOR.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dev.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
evals/: __init__.py  eval_agent.py  eval_tools.py  evaluators.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  (+2 more)
playbooks/: explain-repo.yaml  fix-bug.yaml  migration-plan.yaml  review-code.yaml  write-tests.yaml
src/artifactor/: __init__.py  cli.py  config.py  constants.py  logger.py  logging_config.py  main.py  prompts.py
tests/: conftest.py  test_cli.py  test_cli_mcp.py  test_config.py  test_logging_config.py  test_prompts.py
tests/test_agent/: test_agent.py  test_logger_intent.py  test_resolve_model.py  test_router.py  test_specialists.py  test_tool_logic.py
tests/test_analysis/: test_analyzer.py  test_analyzer_checkpoint_log.py  test_api_discovery.py  test_ast_parser.py  test_call_graph.py  test_circuit_breakers.py  test_combined.py  test_dependency_graph.py  test_llm_analyzer.py  test_llm_embedder.py  test_pipeline.py  test_pipeline_persist.py  test_schema_extractor.py  test_static_parallel.py
tests/test_api/: test_analyze_sse.py  test_app_state.py  test_cas_helper.py  test_chat_helpers.py  test_chat_sse.py  test_create_task.py  test_diagrams.py  test_done_callback.py  test_drain_events.py  test_event_bus.py  test_late_joiner.py  test_playbooks.py  test_routes.py  test_sse_helpers.py  test_status_endpoint.py  test_tool_status.py
tests/test_chat/: test_conversation.py  test_rag_pipeline.py  test_rrf.py  test_vector_rag.py
tests/test_constants/: test_section_name_drift.py
tests/test_diagrams/: test_mermaid.py  test_renderer.py
tests/test_evals/: test_evaluators.py
tests/test_export/: test_export.py  test_mermaid_prerender.py  test_pdf.py
(+204 files in other folders)
